Fix div height issue and force legend wrap on small screens

--- a/caribnode/static/css/site_base.css
+++ b/caribnode/static/css/site_base.css
@@ -414,6 +414,10 @@ footer.footer form select {
 
 /**** HELPER CLASSES ****/
 
+.overflow {
+    overflow: auto;
+}
+
 .text-center {
     text-align: center;
 }
